--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:image" content="./assets/logo.svg" />
     <title>Igor Penedos</title>
   </head>
   <body class="bg-background text-blue-900">
