--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <meta property="og:image" content="./assets/logo.svg" />
     <title>Igor Penedos</title>
   </head>
-  <body class="bg-background text-blue-900">
+  <body class="bg-background text-primary">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
